--- a/detection/templates/sym_prediction_form.html
+++ b/detection/templates/sym_prediction_form.html
@@ -11,7 +11,7 @@
         <div class="form-container">
             <form method="post" action="{% url 'predict_syms' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form.as_ul }}
                 <input type="submit" value="Predict">
                 <a href="{% url 'home' %}" class="home-button">Home</a>
             </form>
